--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "react-paginate": "^7.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-show-more-text": "^1.5.2",
     "react-toastify": "^7.0.4",
     "reactjs-popup": "^2.0.4",
+    "sweetalert2": "^11.4.9",
     "video-react": "^0.15.0",
     "web-vitals": "^1.1.1",
     "web3": "^1.7.0"
