--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-show-more-text": "^1.5.2",
     "react-toastify": "^7.0.4",
     "reactjs-popup": "^2.0.4",
+    "recharts": "^2.1.10",
     "sweetalert2": "^11.4.9",
     "video-react": "^0.15.0",
     "web-vitals": "^1.1.1",
